Replace hugo expand shortcodes

--- a/src/content/lessen/wiskunde/meetkunde_1/basisbegrippen/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/basisbegrippen/index.mdx
@@ -38,9 +38,10 @@ De punten **A, B, C, D** zijn **collineair**. De punten **A, D en E** zijn bijvo
 ## Van punt naar ruimte
 Nog even herhalen vooraleer we verder gaan. Een **punt** is een stip en dus het kleinste dat er is in de meetkunde. Als je heel veel stippen in **1 richting** (bv. horizontaal) naast elkaar zet, dan krijg je een **rechte**. Een **vlak** is nog groter en kan je je voorstellen als een blaadje papier. 📝 Alles wat op het blad staat, ligt in het vlak. Ook dit loopt **oneindig** door (in **twee richtingen**). Tenslotte is er een **ruimte**, dit heeft **drie dimensies** en het is dus een oneindig aantal punten in **drie richtingen**.
 
-{{< expand "Even stilstaan bij de betekenis van 'richting'" >}}
+<Expand title="Even stilstaan bij de betekenis van 'richting'">
+
 Vaak denken mensen bij het woord **richting** aan links of rechts. In de wiskunde, en voornamelijk de fysica, spreken we echter op een andere manier over *richting*. Voor ons is richting namelijk **horizontaal, verticaal, in een hoek van 60°...**. Links en rechts duidt de **zin** aan. Wanneer we dus spreken over **oneindig in 1 richting**, kan je je het volgende voorstellen: **een horizontale lijn die zowel links als rechts oneindig doorloopt**. De richting kan bv. 'horizontaal' zijn en zegt niets over links of rechts.
-{{< /expand >}}
+</Expand>
 
 ## Wat is het verschil tussen een rechte en een lijnstuk?
 Een **lijnstuk** is, zoals doet vermoeden, een stuk van een lijn. 🤯 Meer bepaald: een lijn die **begrensd is door twee punten**. We **benoemen** het lijnstuk steeds naar zijn **grenspunten**. Dat zijn de **punten die het lijnstuk begrenzen**. Weet jij nu welke van volgende twee een lijnstuk is en welke een rechte <Mute text="of lijn"/>? 🤔
@@ -70,9 +71,10 @@ Het **metriek stelsel** ken je gegarandeerd. Ik noem enkele voorbeelden: centime
 
 In de meetkunde maken we vooral (zo goed als altijd) gebruik van **afstandsmaten**. Dit zijn de **centimeter**, **decimeter**, **meter**... Twee centimeter wil dan eigenlijk niets anders zeggen dan: twee maal de lengte van een centimeter. Een correcte notatie voor de lengte van [AB] is dus $|AB| = 4 \si{ cm}$.
 
-{{< expand "Wanneer gebruik ik geen eenheden?" >}}
+<Expand title="Wanneer gebruik ik geen eenheden?">
+
 Je zal zien dat er soms toch **geen eenheid** staat. Deze wordt vaak weggelaten **als het gaat over verhoudingen** of als **de afbeelding geschaald wordt**. De grootte van de afbeeldingen op *Hoe Zit Het?* wordt namelijk aangepast naargelang de grootte van je scherm. 🖥️ Wij kunnen iets tekenen dat 4 cm lang is, maar als het dan verkleind wordt om op je smartphone 📱 te passen, klopt de lengte niet meer. En aangezien de lengte van een (centi)meter vaststaat, kiezen we ervoor om de **eenheid weg te laten**. Dat is het meest correct. Onze illustraties zijn tenslotte maar voorbeelden en geen tekeningen van een architect. 🏠
-{{< /expand >}}
+</Expand>
 
 Wanneer twee (of meer) **lijnstukken dezelfde lengte** hebben, duiden we dit aan met **dezelfde merktekens**.
 
