--- a/src/content/lessen/wiskunde/meetkunde_1/driehoeken/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/driehoeken/index.mdx
@@ -30,11 +30,12 @@ Je kan dit **zelf testen** door een willekeurige driehoek te tekenen en vervolge
 De **som van de hoeken van een driehoek** is steeds **180°**.
 </Attention>
 
-{{< expand "Driehoeken en de vorm van ons universum" >}}
+<Expand title="Driehoeken en de vorm van ons universum">
+
 Dat de som van de hoeken van een driehoek 180° vormt is een handig gegeven. We moeten echter wel een kanttekening maken en erbij zeggen dat deze eigenschap enkel en alleen geldt in de vlakke meetkunde. In meetkundige systemen met gebogen oppervlakken, zoals de bolmeetkunde, geldt deze eigenschap niet. Aan de hand van deze inzichten is het gelukt om de vorm van ons universum te bepalen. 🌌
 
 Astronomen hebben een denkbeeldige driehoek geconstrueerd met drie extreem verafgelegen objecten :star2:. Ze hebben vervolgens de som gemaakt van de hoeken en kwamen op een afgeronde waarde van 180°. Dit wil zeggen dat het universum zo goed als vlak is (aangezien de eigenschap alleen geldt in vlakke meetkunde). 🤯
-{{< /expand >}}
+</Expand>
 
 ## Merkwaardige lijnen
 Een driehoek heeft verschillende **merkwaardige lijnen**. Dit zijn lijnen met een of meerdere speciale eigenschappen. Twee van zulke merkwaardige lijnen, de [middelloodlijn](../rechten) en [bissectrice](../hoeken), hebben we reeds behandeld in vorige lessen. **In het geval van een driehoek** wordt deze eigenschap dan **toegepast** op een zijde of hoek van de **driehoek**. 
