--- a/src/content/lessen/wiskunde/meetkunde_1/hoeken/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/hoeken/index.mdx
@@ -47,11 +47,12 @@ Elke **hoek** heeft **juist één bissectrice**, net zoals elk lijnstuk juist é
 De **bissectrice** (of **deellijn**) van een hoek is de rechte die de hoek in twee even grote hoeken verdeelt.
 </Attention>
 
-{{< expand "Een hoek verdelen in drie gelijke delen zonder geodriehoek" >}}
+<Expand title="Een hoek verdelen in drie gelijke delen zonder geodriehoek">
+
 Later in je schoolse loopbaan, zal je nog leren hoe je het midden van een lijnstuk, een loodlijn, een bissectrice... met **slechts passer en meetlat** kan construeren (dus zonder geodriehoek). Hier hielden de **oude Grieken** zich ook al mee bezig, maar ze zijn er nooit in geslaagd om een **hoek in drie gelijke hoeken te verdelen**. Dit is één van de **drie problemen uit de klassieke Griekse meetkunde**. 
 
 Vooraleer je begint met dit toch te proberen, wil ik je waarschuwen: in 1836 heeft de wiskundige Wantzel **bewezen dat dit onmogelijk is**.
-{{< /expand >}}
+</Expand>
 
 ## Het verband tussen hoeken en draaiingen 🥴
 Wanneer je een lijnstuk opneemt en **draait** <Mute text="(je zorgt er dus voor dat één punt, de as, op dezelfde plaats blijft liggen)"/>, dan **maak je** eigenlijk een **bepaalde hoek**. Meer nog, je draait iets steeds **onder een bepaalde hoek**.
