--- a/src/content/lessen/wiskunde/meetkunde_1/rechten/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/rechten/index.mdx
@@ -67,11 +67,12 @@ Voor de volgende eigenschappen neem je er best een **blaadje papier** 📃 en ee
 | $a \perp c$ en $b \perp c$          | Als twee rechten loodrecht op eenzelfde derde rechte staan, dan zijn de rechten onderling evenwijdig.                |
 | $a \perp b$ en $b \parallel c$      | Als een rechte loodrecht staat op een van twee evenwijdige rechten, dan staat ze ook loodrecht op de andere.         |
 
-{{< expand "Euclidische meetkunde" >}}
+<Expand title="Euclidische meetkunde">
+
 De vlakke meetkunde, die het meest besproken wordt in het middelbaar, noemt men soms ook Euclidische meetkunde, naar de grondlegger **Euclides** (4e eeuw v. Chr.). Alle regeltjes in deze Euclidische meetkunde worden afgeleid uit **vijf axioma's of postulaten**. Een soort basisbeginselen waarop al de rest is voortgebouwd. 🏛️
 
 De eerste eigenschap die hierboven is opgelijst, is het **vijfde postulaat** van de Euclidische meetkunde en dit kan men niet bewijzen. Veel wiskundigen, waaronder Euclides zelf, hebben dit doorheen de tijd proberen te bewijzen, zonder succes. Uiteindelijk was het **Carl Friedrich Gauss** (18e - 19e eeuw), een andere bekende wiskundige, die hieruit concludeerde dat er ook **niet-Euclidische meetkunde** bestaat, waarbij het vijfde postulaat niet geldt. Sindsdien zijn er tal van niet-Euclidische meetkundes ontdekt/bestudeerd, zoals de **hyperbolische** en **elliptische** meetkunde. 🤓
-{{< /expand >}}
+</Expand>
 
 ## Hoe bereken ik de afstand tussen een punt en een rechte?
 Als we de **afstand** willen meten 📏 tussen twee objecten, gebruiken we steeds **rechte lijnen**. Dit is de *kortste weg* en wordt dus gebruikt voor afstanden. Maar welke rechte lijn moeten we dan gebruiken om de afstand tussen een punt en een rechte te bepalen? :thinking face: We kunnen zoveel rechte lijnen trekken. Daarom spreken we af om de **loodlijn van de rechte a door het punt B** te gebruiken, dit is immers weer de *kortste weg*. 💡
