--- a/src/content/lessen/wiskunde/rekenen_rationaal/breuken/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/breuken/index.mdx
@@ -49,7 +49,8 @@ Als de **nul in de teller** voorkomt, dan is de **uitkomst** $0$. Je neemt nul s
 Als de **nul in de noemer** voorkomt, dan is de **uitkomst ongedefinieerd**, ongeacht het getal in de teller.
 </Attention>
 
-{{< expand "Waarom kunnen we niet delen door 0?" >}}
+<Expand title="Waarom kunnen we niet delen door 0?">
+
 Er zijn verschillende redenen waarom we niet kunnen delen door 0.
 
 Enerzijds kunnen we deze vraag benaderen **vanuit algebraïsch standpunt** waar een deling eigenlijk **het omgekeerde** is **van een vermenigvuldiging**. Wanneer we dus $\frac{a}{b} = c$ hebben, dan geldt er: $c \cdot b = a$. Maar wanneer $b = 0$, dan is dit niet mogelijk. Neem bijvoorbeeld volgende breuk: $\frac{3}{0} = x$. Dan zou $x \cdot 0 = 3$, maar aangezien we delen door 0 in het linkerlid, krijgen we $0 \neq 3$. We kunnen dus **niet delen door nul zonder problemen**.
@@ -66,12 +67,12 @@ Hieronder vind je een tabel die toont hoe de rechterlimiet (die nadert van recht
 | 0.001   | 1000              |
 | 0.0001  | 10000             |
 | 0.00001 | 100000            |
-| \ldots  | \ldots            |
+| $\ldots$  | $\ldots$        |
 | 0       | $+\infty$         |
 
 Het is dus duidelijk dat we **geen eenduidige oplossing** hebben wanneer we **delen door 0**. Vandaar dat dit **ongedefinieerd** is.
 
-{{< /expand >}}
+</Expand>
 
 ## Gelijkwaardige en gelijknamige breuken
 Er bestaan verschillende **speciale breuken**. Dit zijn breuken met **een bepaalde eigenschap** en we kunnen deze aanduiden met een **speciale benaming**. Zo heb je **gelijkwaardige** en **gelijknamige** breuken.
