--- a/src/content/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/rekenen_gehele_getallen/index.mdx
@@ -176,7 +176,8 @@ We zeggen dat **twee opeenvolgende mintekens** hetzelfde is als **één plusteke
 
 Als we nu twee opeenvolgende mintekens hebben, zoals bv. $-(-8)$, dan kunnen we dat lezen als: *"het tegengestelde van $-8$"*. En dat is terug $8$ zelf natuurlijk.
 
-{{< expand "Waarom is $8$ het tegengestelde van $-8$?" >}}
+<Expand title="Waarom is $8$ het tegengestelde van $-8$?">
+
 
 Het tegengestelde van een getal vind je door je af te vragen: welk getal moet ik hierbij optellen om bij $0$ uit te komen? Of anders: hoeveel stappen moet ik op de getallenas zetten om van dit getal naar $0$ te gaan?
 
@@ -184,7 +185,7 @@ Wanneer je bijvoorbeeld op $3$ staat, moet je $3$ stappen *naar links* zetten om
 
 Wanneer we op $-8$ staan, moeten we echter $8$ stappen *naar rechts* zetten om bij $0$ uit te komen. Het tegengestelde van $-8$ is dus $8$.
 
-{{< /expand >}}
+</Expand>
 
 Enkele andere voorbeelden:
 
