Replace hugo class shortcodes

--- a/src/content/lessen/wiskunde/logaritmen/logaritme/index.mdx
+++ b/src/content/lessen/wiskunde/logaritmen/logaritme/index.mdx
@@ -12,7 +12,7 @@ Als je naar de **sterrenhemel** kijkt, dan zie je dat niet alle sterren even fel
 Hipparchos stelde een **magnitudeschaal** op. Hij gaf de helderste sterren het cijfer 1 en de minst heldere sterren het cijfer 6. Dit is echter niet zomaar een schaal, maar een **logaritmische** schaal. Een ster van magnitude 6 is 2,512 helderder dan een ster van magnitude 5, maar 100 keer helderder dan een ster van magnitude 1. 🤯🌠⭐
 
 ## Wat is een logaritme?
-Een **logaritme** is eigenlijk steeds een **functie** <Mute text="(je stopt een getal in het machientje en je krijgt een ander ervoor terug)"/>, meer bepaald **het omgekeerde van de exponentiële functie**. Je hebt ook een **grondtal {{< class "a" "orange" >}}** nodig.
+Een **logaritme** is eigenlijk steeds een **functie** <Mute text="(je stopt een getal in het machientje en je krijgt een ander ervoor terug)"/>, meer bepaald **het omgekeerde van de exponentiële functie**. Je hebt ook een **grondtal <span class="orange">a</span>** nodig.
 
 $$
 ^\orange{a}\\!\log x = y \Leftrightarrow x = \orange{a}^y
