--- a/src/content/lessen/wiskunde/rekenen_rationaal/breuken/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/breuken/index.mdx
@@ -77,7 +77,7 @@ Het is dus duidelijk dat we **geen eenduidige oplossing** hebben wanneer we **de
 ## Gelijkwaardige en gelijknamige breuken
 Er bestaan verschillende **speciale breuken**. Dit zijn breuken met **een bepaalde eigenschap** en we kunnen deze aanduiden met een **speciale benaming**. Zo heb je **gelijkwaardige** en **gelijknamige** breuken.
 
-Sommige breuken zien er anders uit, maar zijn eigenlijk gelijk aan elkaar. Zulke breuken noemen we **gelijkwaardige breuken**. Of ze nu zeggen dat je $\frac{1}{2}$ van de pizza krijgt of $\frac{2}{4}$, uiteindelijk zal je dezelfde hoeveelheid pizza kunnen eten. We kunnen namelijk zowel de teller als de noemer van $\frac{2}{4}$ **delen door {{< class "2" "orange" >}}**. Dan krijgen we $\frac{1}{2}$.
+Sommige breuken zien er anders uit, maar zijn eigenlijk gelijk aan elkaar. Zulke breuken noemen we **gelijkwaardige breuken**. Of ze nu zeggen dat je $\frac{1}{2}$ van de pizza krijgt of $\frac{2}{4}$, uiteindelijk zal je dezelfde hoeveelheid pizza kunnen eten. We kunnen namelijk zowel de teller als de noemer van $\frac{2}{4}$ **delen door <span class="orange">2</span>**. Dan krijgen we $\frac{1}{2}$.
 
 $$
 \frac{\frac{2}{\orange{2}}}{\frac{4}{\orange{2}}} = \frac{1}{2}
