--- a/src/content/lessen/wiskunde/logaritmen/rekenregels/index.mdx
+++ b/src/content/lessen/wiskunde/logaritmen/rekenregels/index.mdx
@@ -63,7 +63,7 @@ $$
 </Attention>
 
 ## De logaritme van een quotiënt
-Om **de logaritme van een quotiënt** te berekenen, gaan we op **gelijkaardige manier** te werk. Hier geven we het **bewijs**, gebruikmakend van één van de **{{< class "basisformules" "orange" >}}** en de regels voor **rekenen met machten**.
+Om **de logaritme van een quotiënt** te berekenen, gaan we op **gelijkaardige manier** te werk. Hier geven we het **bewijs**, gebruikmakend van één van de **<span class="orange">basisformules</span>** en de regels voor **rekenen met machten**.
 
 \begin{split}
     ^a\\!\log{ \frac{\orange{x_1}}{\orange{x_2}}} &= \\ ^a\\!\log{ \frac{\orange{a^{^a\\!\log x_1}}}{\orange{a^{^a\\!\log x_2}}}} \\\\\
