Remove unnecessary backslashes from verplaatsing/index.md

--- a/src/content/lessen/fysica/beweging/verplaatsing/index.mdx
+++ b/src/content/lessen/fysica/beweging/verplaatsing/index.mdx
@@ -11,7 +11,7 @@ Maria en Dirk willen dit weekend van Brussel naar Gent (57 km) rijden en vervolg
 
 ![Een visualisatie van de situatie.](img/inleiding.png)
 
-Maria zegt: \"We nemen best de trein, want anders moeten we 86 kilometer met de auto **afleggen** en dat is niet goed voor het milieu.\" Dirk is niet akkoord en zegt: \"Onze **verplaatsing** bedraagt slechts 28 km, dus we kunnen best de auto nemen.\" Wie van beide is juist? 🤔
+Maria zegt: "We nemen best de trein, want anders moeten we 86 kilometer met de auto **afleggen** en dat is niet goed voor het milieu." Dirk is niet akkoord en zegt: "Onze **verplaatsing** bedraagt slechts 28 km, dus we kunnen best de auto nemen." Wie van beide is juist? 🤔
 
 ## De baan van een beweging
 Vooraleer we kunnen bepalen wie gelijk heeft, moeten we ons eerst afvragen **waar de beweging zich afspeelt**. Dit doen we doormiddel van de **baan**. In het geval van **Maria** <Mute text="die met de trein wil gaan"/> zal de beweging zich **op de sporen** afspelen. Bij **Dirk** <Mute text="die met de auto wil gaan"/> zal de verplaatsing zich **op de weg** afspelen.
