--- a/src/content/lessen/wiskunde/meetkunde_1/hoeken/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/hoeken/index.mdx
@@ -16,7 +16,7 @@ Wanneer twee lijnen elkaar snijden, dan doen ze dit onder een bepaalde **hoek**.
 
 Een **hoek** wordt steeds **bepaald door twee halfrechten met een gemeenschappelijk grenspunt**. De halfrechten noemen we de **benen** van de hoek en het grenspunt noemen we **het hoekpunt**. Een hoek heeft steeds **twee benen** en **één hoekpunt**.
 
-![Een hoek bestaat uit een hoekpunt en twee benen.](img/terminologie.png)
+![Een hoek bestaat uit een hoekpunt en twee benen.](img/hoeken_terminologie.png)
 
 We kunnen een hoek op drie manieren **benoemen**. Enerzijds kunnen we dit doen met een **Griekse letter**, zoals $\alpha$ (alfa) of $\theta$ (thèta). Anderzijds kunnen we dit doen met een ***gewone* letter** (de letter van het grenspunt) waar een **hoedje** 🎩 op staat, bijvoorbeeld $\hat{A}$ of $\hat{B}$. Een derde manier gebruiken we als er **verwarring** mogelijk zou zijn met één letter. 😕 We schrijven dan **drie letters** op. Twee letters (de buitenste) zijn afkomstig van **een punt op elk been**. De middelste letter is **de hoek zelf** en krijgt een hoedje. Zo krijg je bijvoorbeeld $B\hat{A}C$. 😀
 
@@ -36,7 +36,7 @@ Daarnaast zijn er nog drie <Mute text="nieuwe"/> termen: een **nulhoek**, **gest
 Echt moeilijk te onthouden zijn ze niet, toch?! 🧐😉
 
 ## Wat is de bissectrice van een hoek?
-In [de les over rechten](../rechten) hebben we de definitie van het midden van een lijnstuk gezien. Ook **hoeken** kunnen we **verdelen in twee gelijke hoeken**. De lijn die de hoek verdeelt noemt men de **deellijn of bissectrice**. 
+In [de les over rechten](./rechten) hebben we de definitie van het midden van een lijnstuk gezien. Ook **hoeken** kunnen we **verdelen in twee gelijke hoeken**. De lijn die de hoek verdeelt noemt men de **deellijn of bissectrice**. 
 
 ![De bissectrice (of deellijn) van een hoek is de rechte die de hoek in twee even grote hoeken verdeelt.](img/bissectrice.png)
 
