--- a/src/content/lessen/wiskunde/meetkunde_1/oppervlakte/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/oppervlakte/index.mdx
@@ -42,7 +42,7 @@ Merk op dat je bij de **figuren** waar er in de **noemer** een $2$ staat, dit ei
 Als je de **oppervlakte van samengestelde figuren** wilt bepalen, dan verdeel je deze figuur best in verschillende figuren waarvoor een formule bestaat. Zo kan je een gevel van een huis splitsen in een vierkant (of rechthoek) en een driehoek. 🏠 🌲
 
 ## Oppervlakte van ruimtefiguren
-In de [les over ruimtefiguren](../figuren) hebben we geleerd dat ruimtefiguren bestaan uit vlakke figuren. Als we een **ontwikkeling** maken, dan zien we dit goed. Om de totale oppervlakte van een ruimtefiguur te berekenen, neem je dus **de som van oppervlaktes van de vlakke figuren** waaruit de ruimtefiguur is opgebouwd. 
+In de [les over ruimtefiguren](./figuren) hebben we geleerd dat ruimtefiguren bestaan uit vlakke figuren. Als we een **ontwikkeling** maken, dan zien we dit goed. Om de totale oppervlakte van een ruimtefiguur te berekenen, neem je dus **de som van oppervlaktes van de vlakke figuren** waaruit de ruimtefiguur is opgebouwd. 
 
 Ook hier kan je het voor sommige ruimtefiguren **eenvoudiger** maken. Zo bestaat een **kubus** uit **zes identieke vierkanten**, dus je **vermenigvuldigt** de **oppervlakte van één vierkant met zes**. Kan jij nog zo'n formules vinden? 🧐
 
