--- a/src/content/lessen/wiskunde/rekenen_rationaal/breuken/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/breuken/index.mdx
@@ -16,7 +16,7 @@ Zoals je wellicht al weet, noemen we die $\frac{1}{8}$ een **breuk**. In deze le
 
 Een breuk bestaat uit een **teller** en een **noemer**. Tussen de teller en noemer trekken we een **breukstreep**.
 
-![Een breuk bestaat uit een breukstreep met daarboven de teller. Onder de breukstreep staat de noemer.](img/terminologie.png)
+![Een breuk bestaat uit een breukstreep met daarboven de teller. Onder de breukstreep staat de noemer.](img/teller_noemer_terminologie.png)
 
 De **teller** *telt* het aantal stukken dat je neemt. De **noemer** *benoemd* in hoeveel stukken we de taart hebben verdeeld. In de breuk $\frac{3}{4}$ is de teller $3$ en de noemer $4$. Dat betekent dat we de taart in $4$ stukken hebben verdeeld en we daar $3$ stukken van nemen.
 
@@ -104,7 +104,7 @@ $$
 
 Laten we het laatste voorbeeld nog eens van dichterbij bekijken. 🔎 We kunnen $\frac{25}{5}$ namelijk ook schrijven als $\frac{5}{1}$ <Mute text="of simpelweg als 5."/> Als we dit doen is de breuk **niet meer gelijknamig** met de anderen, want de **noemer is veranderd**. 
 
-Omgekeerd kunnen we ook **een breuk gelijknamig maken**. Hoe we dit doen en waarom we dit gebruiken kan je lezen in de les over [het optellen en aftrekken van breuken en kommagetallen](../optellen_aftrekken).
+Omgekeerd kunnen we ook **een breuk gelijknamig maken**. Hoe we dit doen en waarom we dit gebruiken kan je lezen in de les over [het optellen en aftrekken van breuken en kommagetallen](./optellen_aftrekken).
 
 ## Breuken, kommagetallen en procenten
 Breuken, kommagetallen <Mute text="of decimale vormen"/> en procenten behoren allemaal tot dezelfde familie. **Kan jij hun relatie vinden uit onderstaande tabel?** 🧐
