--- a/src/content/lessen/wiskunde/rekenen_rationaal/vierkantswortels/index.mdx
+++ b/src/content/lessen/wiskunde/rekenen_rationaal/vierkantswortels/index.mdx
@@ -9,11 +9,11 @@ images: []
 tags: ["Vierkantswortels", "Rekenen", "Bewerkingen", "Breuken", "Kommagetallen", "Rationale getallen"]
 description: "In deze les herhalen we wat een vierkantswortel precies is en leren we de vierkantswortel te nemen van breuken en kommagetallen."
 ---
-Net zoals de deling het omgekeerde is van de vermenigvuldiging, zijn **wortels** 🥕 het omgekeerde van [machten](../machten). 
+Net zoals de deling het omgekeerde is van de vermenigvuldiging, zijn **wortels** 🥕 het omgekeerde van [machten](./machten). 
 
 ## Wat is een vierkantswortel?
 
-![Een macht bestaat uit een grondtal en een exponent. In dit voorbeeld is 5 het grondtal en 3 de exponent.](img/terminologie.png)
+![Een macht bestaat uit een grondtal en een exponent. In dit voorbeeld is 5 het grondtal en 3 de exponent.](img/vierkantswortel_terminologie.png)
 
 
 Een **wortelteken** schrijf je zoals een *V*, maar dan met een streepje links aan het begin en een grote streep boven de bewerking waarvan
