Fix some meetkunde lessen not showing

--- a/src/content/lessen/wiskunde/meetkunde_1/omtrek/index.mdx
+++ b/src/content/lessen/wiskunde/meetkunde_1/omtrek/index.mdx
@@ -31,3 +31,5 @@ Om de **omtrek** te berekenen, neem je de **som van alle buitenzijden**. Bij enk
 * Ruit en vierkant: $z \cdot 4$;
 * Parallellogram en rechthoek: $z_{1} \cdot 2 + z_{2} \cdot 2$ met $z_{1}$ de lange zijde en $z_{2}$ de korte zijde;
 * Cirkel: meet de straal ($r$) en vul in: $2 \cdot \pi \cdot r$ ($\pi \approx 3,14$).
+
+</Attention>
